syntax = "proto3";

package devplan.observer.types.observations;

message ObservationKey {
  string kind = 1;
  string name = 2;
  string key = 3;
}

message Observation {
  ObservationKey key = 1;
  bytes content = 2;
}